[tool.poetry]
name = "twitter_enricher"
version = "0.1.0"
description = "Simple Twitter stream enricher with weather data"
authors = ["Mauricio Collazos <ma0acollazos@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
